shutter (0.80~ppa1) jaunty; urgency=low

  * fixed bugs
  * Drawing Tool
    -- LP: #338809
       [keep tool focus after one usage]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 06 Apr 2009 00:35:59 +0200

shutter (0.70.2~ppa4) jaunty; urgency=low

  * fixed bugs
    -- LP: #339139
       [Shutter selects incorrect target window]
    -- LP: #340855 + LP: #340864
       [fixed save-as function]	
    -- LP: #340856
       [main window is partly visible on screenshots]
    -- LP: #340990
       [Shutter crashes when xserver grab fails]
    -- LP: #341459
       [Ctrl+ + doesn't zoom in drawing area]
    -- LP: #347821
       [decode filesize properly]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 24 Mar 2009 21:41:37 +0100

shutter (0.70.1~ppa2) jaunty; urgency=low

  * fixed bugs
    -- LP: #260771
       [Detect 'window-manager-changed' event]	
    -- LP: #328654
       [Weird paths after uploading]
    -- LP: #338829
       [Uploading to imageshack is broken]
    -- LP: #338990
       [Open with dialog freezes shutter and desktop]
    -- LP: #340253
       [Capture Website creates two files]
    -- LP: #340459
       [Use fallback icons if icon does not exist]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 10 Mar 2009 23:06:25 +0100

shutter (0.70~ppa11) jaunty; urgency=low
  * General changes
    -- Rebranding from GScrot to Shutter
    -- Exports to and opens all file formats supported by gdk-pixbuf
    -- Added native printing support (instead of gtklp)
    -- Watch opened files via GnomeVFS File Monitor to monitor changes 
    -- Integration of GNOME Virtual File System and
       GNOME authentication manager (LP: #310780)
    -- Respect non-rectangular windows (XSHAPE) 
       when using metacity (LP: #260771)
    -- Use themeable icons wherever its is possible
    -- Use systemwide MIME Information instead of config file